# czp-pat

./: CMakeLists.txt  README.md
BasicLevel/: 1001 害死人不偿命的(3n+1)猜想.c  1002 写出这个数.c  1003 我要通过.c  1004 成绩排名.c  1005 继续(3n+1)猜想.c  1006 换个格式输出整数.c  1007 素数对猜想.c  1008 数组元素循环右移问题.c  1009 说反话.c  1010 一元多项式求导.c  1011 A+B 和 C.c  1012 数字分类.c  1013 数素数.c  1014 福尔摩斯的约会.c  1015 德才论.c  1016 部分A+B.c  1017 A除以B.c
